--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,6 +6,8 @@
     <string name="setting">前往设置</string>
     <string name="cancel">取消</string>
     <string name="confirm">确定</string>
+    <string name="mode_caiyang">采样模式</string>
+    <string name="pinlv_caiyang">采样频率</string>
 
     <string name="delNotifyMsg">确定删除所有数据？\n删除数据等待时间大约120秒。</string>
 
